fix archive overlaping with footer links

--- a/assets/_scss/pages/_archive.scss
+++ b/assets/_scss/pages/_archive.scss
@@ -1,10 +1,9 @@
 /* Archive */
 
-.archive li { margin-bottom: 0 }
-.archive h2 {
-    font-size: 1.5em;
-    margin-bottom: 0;
+.archive {
+    padding-bottom: 8rem;
 }
+
 .archive-year {
     font-size: 3rem;
 }
